--- a/Swift_CustomApp/Base.lproj/Main.storyboard
+++ b/Swift_CustomApp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="mVJ-AC-Ggt">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="EGd-5Q-3R8">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -130,7 +130,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="524.63768115942037" y="977.67857142857133"/>
+            <point key="canvasLocation" x="484" y="479"/>
         </scene>
         <!--Friends-->
         <scene sceneID="nsg-R5-4j5">
@@ -431,6 +431,40 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XmG-DT-WBX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2490" y="311"/>
+        </scene>
+        <!--Login Wtb View Controller-->
+        <scene sceneID="lZS-0j-95z">
+            <objects>
+                <viewController id="EGd-5Q-3R8" customClass="VKLoginWtbViewController" customModule="Swift_CustomApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="hEB-O3-CKs">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nBR-UG-XKj">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="bnN-bT-qBL"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="bnN-bT-qBL" firstAttribute="trailing" secondItem="nBR-UG-XKj" secondAttribute="trailing" id="LXs-0q-b5v"/>
+                            <constraint firstItem="nBR-UG-XKj" firstAttribute="leading" secondItem="bnN-bT-qBL" secondAttribute="leading" id="bgr-XB-G3P"/>
+                            <constraint firstItem="nBR-UG-XKj" firstAttribute="top" secondItem="bnN-bT-qBL" secondAttribute="top" id="i3O-OS-qR2"/>
+                            <constraint firstItem="bnN-bT-qBL" firstAttribute="bottom" secondItem="nBR-UG-XKj" secondAttribute="bottom" id="iU2-v8-WS3"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="webView" destination="nBR-UG-XKj" id="Q7e-Lu-6gc"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="egV-LG-TuB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="578" y="1177"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="MHy-IK-LXM">
