--- a/Swift_CustomApp/Base.lproj/Main.storyboard
+++ b/Swift_CustomApp/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BDv-8o-N50">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="517.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="512.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Authorization" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="csC-2k-Eu5">
                                                 <rect key="frame" x="115" y="100" width="184" height="36"/>
@@ -30,7 +30,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uw8-hK-TKe">
-                                                <rect key="frame" x="163" y="419.5" width="88" height="48"/>
+                                                <rect key="frame" x="163" y="414.5" width="88" height="48"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                 <color key="tintColor" systemColor="systemGreenColor"/>
                                                 <state key="normal" title="Sign in"/>
@@ -84,7 +84,7 @@
                                                 </constraints>
                                             </view>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="KMb-Uh-MpC">
-                                                <rect key="frame" x="150.5" y="477.5" width="113" height="30"/>
+                                                <rect key="frame" x="150.5" y="472.5" width="113" height="30"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login with" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J56-ta-0cW">
                                                         <rect key="frame" x="0.0" y="0.0" width="78" height="30"/>
@@ -113,7 +113,7 @@
                                             <constraint firstItem="Gt1-rH-6x4" firstAttribute="top" secondItem="xqA-vh-YJT" secondAttribute="bottom" constant="15" id="KzO-fX-bln"/>
                                             <constraint firstItem="xqA-vh-YJT" firstAttribute="centerX" secondItem="BDv-8o-N50" secondAttribute="centerX" id="OaJ-07-YOT"/>
                                             <constraint firstItem="Gt1-rH-6x4" firstAttribute="centerX" secondItem="BDv-8o-N50" secondAttribute="centerX" id="Owm-FL-PvY"/>
-                                            <constraint firstItem="Uw8-hK-TKe" firstAttribute="top" secondItem="Gt1-rH-6x4" secondAttribute="bottom" constant="15" id="PzS-sX-8j3"/>
+                                            <constraint firstItem="Uw8-hK-TKe" firstAttribute="top" secondItem="Gt1-rH-6x4" secondAttribute="bottom" constant="10" id="PzS-sX-8j3"/>
                                             <constraint firstAttribute="bottom" secondItem="KMb-Uh-MpC" secondAttribute="bottom" constant="10" id="QLI-f2-RM7"/>
                                             <constraint firstItem="Uw8-hK-TKe" firstAttribute="centerX" secondItem="BDv-8o-N50" secondAttribute="centerX" id="cWe-5w-kS2"/>
                                             <constraint firstAttribute="trailing" secondItem="xqA-vh-YJT" secondAttribute="trailing" constant="10" id="cXL-aM-KRt"/>
@@ -210,7 +210,7 @@
         <!--Communities-->
         <scene sceneID="usC-zL-I64">
             <objects>
-                <tableViewController storyboardIdentifier="UserCommunitiesTableView" id="FHR-Jj-haw" customClass="UserCommunitiesTableViewController" customModule="Swift_CustomApp" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="UserCommunitiesTableView" id="FHR-Jj-haw" customClass="GroupsTableViewController" customModule="Swift_CustomApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="fkv-4k-lPh">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -232,7 +232,7 @@
                             </constraints>
                         </view>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CommunityCell" id="zAE-Uy-KWe" customClass="CommunitiesTableViewCell" customModule="Swift_CustomApp" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="GroupCell" id="zAE-Uy-KWe" customClass="GroupsTableViewCell" customModule="Swift_CustomApp" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="88" width="414" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="zAE-Uy-KWe" id="vTr-d2-g4L">
@@ -278,16 +278,16 @@
             </objects>
             <point key="canvasLocation" x="2490" y="1663"/>
         </scene>
-        <!--Feed Table View Controller-->
+        <!--News Feed Table View Controller-->
         <scene sceneID="1T7-8P-neW">
             <objects>
-                <tableViewController id="IHd-nJ-65H" customClass="FeedTableViewController" customModule="Swift_CustomApp" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="IHd-nJ-65H" customClass="NewsFeedTableViewController" customModule="Swift_CustomApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="MWD-Ad-iHh">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" id="Cdn-Fy-wz2" customClass="PostTableViewCell" customModule="Swift_CustomApp" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="NewsFeedCell" id="Cdn-Fy-wz2" customClass="NewsFeedTableViewCell" customModule="Swift_CustomApp" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Cdn-Fy-wz2" id="eCZ-CH-2al">
@@ -310,7 +310,7 @@
         <!--Global search-->
         <scene sceneID="dNw-62-8hR">
             <objects>
-                <tableViewController storyboardIdentifier="GlobalCommunitiesTableView" id="yHi-8h-1SC" customClass="GlobalCommunitiesTableViewController" customModule="Swift_CustomApp" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="GlobalCommunitiesTableView" id="yHi-8h-1SC" customClass="SearchGroupTableViewController" customModule="Swift_CustomApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="X17-QQ-tZ9">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -332,7 +332,7 @@
                             </constraints>
                         </view>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CommunityCell" id="GAV-9N-EYC" customClass="CommunitiesTableViewCell" customModule="Swift_CustomApp" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="GroupCell" id="GAV-9N-EYC" customClass="GroupsTableViewCell" customModule="Swift_CustomApp" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="88" width="414" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GAV-9N-EYC" id="GUD-74-wcD">
@@ -375,10 +375,10 @@
             </objects>
             <point key="canvasLocation" x="2490" y="978"/>
         </scene>
-        <!--Friend Collection View Controller-->
+        <!--Friend Photos Collection View Controller-->
         <scene sceneID="fzJ-vu-FhG">
             <objects>
-                <collectionViewController storyboardIdentifier="FriendCollectionView" id="vff-bu-WFk" customClass="FriendCollectionViewController" customModule="Swift_CustomApp" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController storyboardIdentifier="FriendCollectionView" id="vff-bu-WFk" customClass="FriendPhotosCollectionViewController" customModule="Swift_CustomApp" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="hs0-Yb-i7M">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -390,7 +390,7 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AvatarCell" id="ACM-aM-cr8">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FriendPhotoCell" id="ACM-aM-cr8">
                                 <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="mSa-Al-1Hn">
@@ -410,10 +410,10 @@
             </objects>
             <point key="canvasLocation" x="4261" y="311"/>
         </scene>
-        <!--Friends Photos Collection View Controller-->
+        <!--Photos Carousel Collection View Controller-->
         <scene sceneID="YK0-So-gd6">
             <objects>
-                <collectionViewController storyboardIdentifier="FriendPhotosCollectionView" id="LNF-LU-QtI" customClass="FriendsPhotosCollectionViewController" customModule="Swift_CustomApp" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController storyboardIdentifier="FriendPhotosCollectionView" id="LNF-LU-QtI" customClass="PhotosCarouselCollectionViewController" customModule="Swift_CustomApp" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" dataMode="prototypes" id="vjA-Zz-P5k">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
