--- a/UI/Cells/FriendPhotoCollectionViewCell.xib
+++ b/UI/Cells/FriendPhotoCollectionViewCell.xib
@@ -4,34 +4,54 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FriendPhotoCell" id="gTV-IL-0wX" customClass="FriendPhotoCollectionViewCell" customModule="Swift_CustomApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="170" height="210"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                <rect key="frame" x="0.0" y="0.0" width="170" height="210"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="95g-yP-2Ze">
-                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="X8U-dF-n3N">
+                        <rect key="frame" x="10" y="10" width="150" height="150"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="150" id="03M-YN-sFG"/>
+                            <constraint firstAttribute="height" constant="150" id="iJa-Mh-XkP"/>
+                        </constraints>
+                        <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="small"/>
                     </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CGD-sq-WAi" customClass="LikeControl" customModule="Swift_CustomApp" customModuleProvider="target">
+                        <rect key="frame" x="10" y="165" width="150" height="40"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="95g-yP-2Ze" secondAttribute="trailing" id="2XS-zy-OFa"/>
-                <constraint firstItem="95g-yP-2Ze" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="74h-dV-zGM"/>
-                <constraint firstAttribute="bottom" secondItem="95g-yP-2Ze" secondAttribute="bottom" id="NbO-Th-H0e"/>
-                <constraint firstItem="95g-yP-2Ze" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="U96-lg-lnd"/>
+                <constraint firstAttribute="trailing" secondItem="X8U-dF-n3N" secondAttribute="trailing" constant="10" id="2zx-jR-FJ6"/>
+                <constraint firstAttribute="bottom" secondItem="CGD-sq-WAi" secondAttribute="bottom" priority="750" constant="5" id="BFw-FY-aps"/>
+                <constraint firstItem="X8U-dF-n3N" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="Bvk-bE-cms"/>
+                <constraint firstItem="CGD-sq-WAi" firstAttribute="top" secondItem="X8U-dF-n3N" secondAttribute="bottom" priority="750" constant="5" id="Dno-sx-4h5"/>
+                <constraint firstAttribute="trailing" secondItem="CGD-sq-WAi" secondAttribute="trailing" constant="10" id="UUC-ai-MLV"/>
+                <constraint firstItem="X8U-dF-n3N" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" priority="750" constant="10" id="gLR-Tf-mm1"/>
+                <constraint firstItem="CGD-sq-WAi" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="uYY-Qd-trv"/>
             </constraints>
+            <size key="customSize" width="249" height="269"/>
             <connections>
-                <outlet property="photoImageView" destination="95g-yP-2Ze" id="x94-I1-1Vs"/>
+                <outlet property="likeControl" destination="CGD-sq-WAi" id="qqP-7v-vfC"/>
+                <outlet property="photoImageView" destination="X8U-dF-n3N" id="YIj-ay-3xW"/>
             </connections>
-            <point key="canvasLocation" x="51" y="73"/>
+            <point key="canvasLocation" x="-523.1884057971015" y="34.151785714285715"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
