--- a/UI/Cells/NewsFeedTableViewCell.xib
+++ b/UI/Cells/NewsFeedTableViewCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="628" id="KGk-i7-Jjw" customClass="PostTableViewCell" customModule="Swift_CustomApp" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="NewsFeedCell" rowHeight="628" id="KGk-i7-Jjw" customClass="NewsFeedTableViewCell" customModule="Swift_CustomApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="628"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -43,7 +43,7 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" contentInsetAdjustmentBehavior="never" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="kPq-Tf-m6Z">
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="kPq-Tf-m6Z">
                         <rect key="frame" x="0.0" y="181" width="375" height="375"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <collectionViewLayout key="collectionViewLayout" id="Ytw-fK-dUE" customClass="PostCollectionViewLayout" customModule="Swift_CustomApp" customModuleProvider="target"/>
@@ -112,7 +112,7 @@
                     <constraint firstAttribute="trailing" secondItem="YX1-Dq-vLX" secondAttribute="trailing" constant="12" id="X0L-Hn-rmQ"/>
                     <constraint firstAttribute="trailing" secondItem="Ro9-LH-IA9" secondAttribute="trailing" constant="12" id="a1r-qg-D4D"/>
                     <constraint firstItem="RN4-tE-DQi" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="iMi-Om-bLw"/>
-                    <constraint firstItem="fiX-qo-RPf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="icb-iH-cQN"/>
+                    <constraint firstItem="fiX-qo-RPf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" priority="750" constant="12" id="icb-iH-cQN"/>
                     <constraint firstAttribute="bottom" secondItem="DWS-Gl-FnZ" secondAttribute="bottom" constant="12" id="irg-Qo-WT8"/>
                     <constraint firstItem="Ro9-LH-IA9" firstAttribute="centerY" secondItem="fiX-qo-RPf" secondAttribute="centerY" id="mNs-oi-bfY"/>
                     <constraint firstAttribute="trailing" secondItem="kPq-Tf-m6Z" secondAttribute="trailing" id="n33-mA-kqS"/>
